compiler/test/fail_compilation/issue18058.d
// REQUIRED_ARGS: -Ifail_compilation/imports/

import issue18058b;

void main()
{
    foo(0.0f);
}
